objects/Service_Token_Definition__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Token_Count__c</fullName>
        <label>Service Token Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Token_Expire_Days__c</fullName>
        <label>Service Token Expire Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Option__c</fullName>
        <label>Support Option</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Purchase_Count__c</fullName>
        <label>Support Purchase Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Purchase_Expire_Days__c</fullName>
        <label>Support Purchase Expire Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Service Token Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Part_Number__c</columns>
        <columns>Service_Token_Count__c</columns>
        <columns>Service_Token_Expire_Days__c</columns>
        <columns>Support_Purchase_Count__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Service Token Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Token Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>